--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "sergeymiracle@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "SergeyMiracle\\Uploadable\\": "src/"
