--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sergeymiracle/eloquent-uploadable",
     "description": "A trait to automatically handle file uploads for Laravel models.",
     "require": {
-        "php": "5.6"
+        "php": ">=5.6.4"
     },
     "license": "MIT",
     "authors": [
