--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "sergeymiracle/eloquent-uploadable",
     "description": "A trait to automatically handle file uploads for Laravel models.",
     "require": {
-        "php": ">=5.6.4"
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
+        "intervention/image": "^2.3"
     },
     "license": "MIT",
     "authors": [
