--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A trait to automatically handle file uploads for Laravel models.",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*|5.4.*",
+        "laravel/framework": "5.3.*|5.4.*|5.5.*",
         "intervention/image": "^2.3"
     },
     "license": "MIT",
