--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,16 @@
     "name": "sergeymiracle/eloquent-uploadable",
     "description": "A trait to automatically handle file uploads for Laravel models.",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
-        "intervention/image": "^2.3"
+        "php": ">=7.2",
+        "illuminate/support": "~5.8.0",
+        "illuminate/filesystem": "~5.8.0",
+        "illuminate/http": "~5.8.0",
+        "illuminate/database": "~5.8.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^3.5",
+        "phpunit/phpunit": "^8.0"
+
     },
     "license": "MIT",
     "authors": [
@@ -19,15 +26,20 @@
             "SergeyMiracle\\Uploadable\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SergeyMiracle\\Uploadable\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "extra": {
       "laravel": {
         "providers": [
           "SergeyMiracle\\Uploadable\\UploadableServiceProvider"
         ]
       }
-    },
-    "suggest": {
-        "spatie/image-optimizer": "Easily optimize images using PHP"
     },
     "config": {
         "sort-packages": true
