--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit --no-configuration SergeyMiracle\\Uploadable\\Tests\\UploadableTest tests/UploadableTest.php"
     },
     "extra": {
       "laravel": {
