--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "A trait to automatically handle file uploads for Laravel models.",
     "require": {
         "php": ">=7.2",
-        "illuminate/support": ">=5.8 <7",
-        "illuminate/filesystem": ">=5.8 <7",
-        "illuminate/http": ">=5.8 <7",
-        "illuminate/database": ">=5.8 <7"
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/filesystem": "^6.0|^7.0|^8.0",
+        "illuminate/http": "^6.0|^7.0|^8.0",
+        "illuminate/database": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.5",
